--- a/src/index.css
+++ b/src/index.css
@@ -1,10 +1,3 @@
-/* 
-const initialItems = [
-  { id: 1, description: "Passports", quantity: 2, packed: false },
-  { id: 2, description: "Socks", quantity: 12, packed: false },
-];
-*/
-
 @import url("https://fonts.googleapis.com/css2?family=Monoton&family=Quicksand:wght@500;700&display=swap");
 
 * {
@@ -101,7 +94,6 @@ input {
 .list ul {
   list-style: none;
   width: 80%;
-  overflow: scroll;
 
   display: grid;
   grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
@@ -125,6 +117,7 @@ input[type="checkbox"] {
 .list li button {
   cursor: pointer;
   background: none;
+  color: rgb(75, 255, 75);
   border: none;
   font-size: 1.8rem;
   padding: 0.8rem;
